--- a/XiGaGa.vcxproj.filters
+++ b/XiGaGa.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="CObj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NotInclude.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KingOfXishu.h">
@@ -74,5 +80,19 @@
     <ClInclude Include="CObj.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NotInclude.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="XiGaGa.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
